EEVEE alpha-clip value applies to all materials #118634

Closed
opened 2024-02-22 22:11:30 +01:00 by Eric-Haines · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.70

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: (newest version of Blender that worked as expected)

Short description of error
When importing USD files, for UsdPrevieSurface the opacityThreshold value does not seem to be fully supported, nor does opaque mode.

Exact steps for others to reproduce the error
Load the USD conformance test file AlphaBlendModeTest.usd from the repo https://github.com/usd-wg/assets/tree/main/test_assets/AlphaBlendModeTest (download the file and subdirectories), or load the opacityThreshold.blend file in the attached ZIP. Select in the viewport, near the upper right, the Material Preview for Viewport Shading. See the attached image for what you should see.

The leftmost column and rightmost two columns are incorrectly rendered. The leftmost column problem is long-standing, a black fringing towards the top when the whole texture should be only yellow and blue. The rightmost two columns appears to be a regression from Blender 3.1, which renders these two correctly at the proper cutoff heights. See how Blender in 3.1 renders by visiting https://github.com/usd-wg/assets/tree/main/test_assets/AlphaBlendModeTest and looking at the third image down, labeled as such.

It's important to support opacityThreshold (which controls the cutoff "height") fully, as some use it for cheap animation effects, hair rendering, and artists tweak the value to change the outlines of cutout objects, among other applications.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.70 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: (newest version of Blender that worked as expected) **Short description of error** When importing USD files, for UsdPrevieSurface the opacityThreshold value does not seem to be fully supported, nor does opaque mode. **Exact steps for others to reproduce the error** Load the USD conformance test file AlphaBlendModeTest.usd from the repo https://github.com/usd-wg/assets/tree/main/test_assets/AlphaBlendModeTest (download the file and subdirectories), or load the opacityThreshold.blend file in the attached ZIP. Select in the viewport, near the upper right, the Material Preview for Viewport Shading. See the attached image for what you should see. The leftmost column and rightmost two columns are incorrectly rendered. The leftmost column problem is long-standing, a black fringing towards the top when the whole texture should be only yellow and blue. The rightmost two columns appears to be a regression from Blender 3.1, which renders these two correctly at the proper cutoff heights. See how Blender in 3.1 renders by visiting https://github.com/usd-wg/assets/tree/main/test_assets/AlphaBlendModeTest and looking at the third image down, labeled as such. It's important to support opacityThreshold (which controls the cutoff "height") fully, as some use it for cheap animation effects, hair rendering, and artists tweak the value to change the outlines of cutout objects, among other applications.
Eric-Haines added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-22 22:11:31 +01:00

This appears to be an EEVEE regression from quite some time ago. Attached is a file from 3.3 LTS showing the problem.

The issue seems to be that, even though there are multiple materials, the Alpha clip from only 1 of the materials controls all of them! It must be a shader variation problem.

badclip.png

This appears to be an EEVEE regression from quite some time ago. Attached is a file from 3.3 LTS showing the problem. The issue seems to be that, even though there are multiple materials, the Alpha clip from only 1 of the materials controls all of them! It must be a shader variation problem. ![badclip.png](/attachments/1dd72aa3-4cc6-41ba-9f6e-76dcf0688365)
Jesse Yurkovich changed title from UsdPreviewSurface's opacityThreshold value not fully supported on USD import to EEVEE alpha-clip value applies to all materials 2024-02-22 22:41:53 +01:00

I should also note that Cycles (the path tracing engine) does not support alpha-clip at all currently since that would require a special shader network to clamp the values in the node graph itself.

I should also note that Cycles (the path tracing engine) does not support alpha-clip at all currently since that would require a special shader network to clamp the values in the node graph itself.
Contributor

I should also note that Cycles (the path tracing engine) does not support alpha-clip at all currently since that would require a special shader network to clamp the values in the node graph itself.

Eevee Next also doesn't have alpha clipping, that will also require shader nodes. It's slightly annoying because there is no Greater-Than-Or-Equal shader node.

> I should also note that Cycles (the path tracing engine) does not support alpha-clip at all currently since that would require a special shader network to clamp the values in the node graph itself. Eevee Next also doesn't have alpha clipping, that will also require shader nodes. It's slightly annoying because there is no Greater-Than-Or-Equal shader node.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-26 12:49:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118634
No description provided.