Fix #118634: EEVEE: Set clip threshold per material

Pull Request: https://projects.blender.org/blender/blender/pulls/118681